Converting to prefix compiler design

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+- executor code
+- command line must set length now, also different prefix :)
 - test the words.
-- look for missing words ++ +++ -- --- sign testing comparison
+- add string constant
+- look for missing words ++ +++ -- --- sign testing comparison compiles
+- cross page call
 - port libraries.
