--- a/TODO
+++ b/TODO
@@ -6,10 +6,16 @@ System:
 		Green : call if in dictionary, numeric constant
 		Yellow : Exec in place (macro or std compilation) or do number switch.									
 
-
+- variable handler. remove, $C9,$00,$00
+- save last executed word (afterwards, e.g. delay one !)
+- !! && @@ operators.
 - add string constant compiler only.
-- if/-if crashout ?
+- basic structures
 - cross page call
 - port libraries.
+- write editor
+- test sprites.
+
+
 
 
