--- a/TODO
+++ b/TODO
@@ -1,20 +1,14 @@
 System:
 
-	Convert back to compilation rule compiles
-
-		Red : add definition, add CALL <compile self>
-		Green : call if in dictionary, numeric constant
-		Yellow : Exec in place (macro or std compilation) or do number switch.									
-
-- define some i/o words.
 - variable handler. remove, $C9,$00,$00
-- save last executed word (afterwards, e.g. delay one !)
+- save last compiled word (afterwards, e.g. delay one !) or some mechanism ... 
 - !! && @@ operators.
-- add string constant compiler only.
 - basic structures
 - cross page call
+- define some i/o words.
 - port libraries.
 - write editor
+- comment words and write document generation
 - test sprites.
 
 
